# grass

./: .gitignore  README  README.md  configure.ac
src/: Makefile.am  lexer.c  lexer.h
test/: Makefile.am  run-test.sh  test-lexer.c
test/sample/test/: head_comment.txt  middle_comment.txt  tail_comment.txt  w2W2.txt
